# src/dto/phoneNumberVerifySchema copy.ts
@@ -1,15 +1,0 @@
-import Joi from 'joi'
-
-const schema = Joi.object({
-  userUuid: Joi.string().required(),
-  phoneNumber: Joi.string().required(),
-  otp: Joi.string().required(),
-})
-
-export interface IPhoneNumberVerify {
-  userUuid: string,
-  phoneNumber: string,
-  otp: string,
-}
-
-export default schema
